--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -5268,7 +5268,9 @@ a {
     top: 0;
     left: -8px;
     border-radius: 50%;
-    background-image: radial-gradient(#ffffff, #ffffff 4px, #282828 5px, #282828 7px, #c1c1c1 8px);
+    background-image: radial-gradient(#ffffff, #ffffff 4px, #282828 5px, #282828 7px, transparent 8px);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 14px 14px 0 rgba(128, 128, 128, 0.32);
+    border: 2px solid #c1c1c1;
     z-index: 1; }
   @media (min-width: 992px) {
     .work-scheme__item {
@@ -5281,7 +5283,8 @@ a {
         height: 38px;
         top: -38px;
         left: 10px;
-        background-image: radial-gradient(#ffffff, #ffffff 9px, #282828 10px, #282828 14px, #c1c1c1 15px); } }
+        background-image: radial-gradient(#ffffff, #ffffff 9px, #282828 10px, #282828 14px, transparent 15px);
+        border: 5px solid #c1c1c1; } }
   .work-scheme__item--lines::before {
     content: "";
     display: block;
