--- a/src/scss/components/_main-nav.scss
+++ b/src/scss/components/_main-nav.scss
@@ -39,7 +39,7 @@
   @include media-breakpoint-up(lg) {
     display: flex;
     padding: 0;
-    margin: 0 60px;
+    margin: 0 45px;
     border-radius: 0;
     background-color: transparent;
   }
@@ -106,6 +106,7 @@
   }
 
   a {
+    display: block;
     font-size: 14px;
     line-height: 20px;
     color: $black-1;
@@ -153,7 +154,7 @@
     flex-grow: 1;
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     background-color: transparent;
     transform: none;
     transition: none;
