--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -68,14 +68,20 @@
             </ul>
           </div>
           <div class="main-nav__user user-nav">
-            <a class="user-nav__login" href="#">Вход
-              <svg class="user-nav__login-icon" width="31" height="30">
+            <a class="user-nav__logout" href="#" aria-label="Выход">
+              <svg class="user-nav__link-icon" width="32" height="30">
+                <use href="img/sprite.svg#logout"></use>
+              </svg>
+            </a>
+            <a class="user-nav__link" href="#">Личный кабинет</a>
+            {# <a class="user-nav__link user-nav__login" href="#">Вход
+              <svg class="user-nav__link-icon user-nav__login-icon" width="31" height="30">
                 <use href="img/sprite.svg#login"></use>
               </svg>
               <svg class="user-nav__login-icon-mobile" width="20" height="20">
                 <use href="img/sprite.svg#login-mobile"></use>
               </svg>
-            </a>
+            </a> #}
           </div>
         </div>
 
