завершит секцию сервисы

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -64,3 +64,4 @@
 @import "components/review";
 @import "components/rating-stars";
 @import "components/services";
+@import "components/breadcrumbs";
