--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -1,3 +1,13 @@
+.services {
+  overflow: hidden;
+}
+
+.services__wrapper {
+  background-color: $white;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
 .services__heading {
   text-align: center;
   max-width: 203px;
@@ -7,6 +17,7 @@
     max-width: none;
     text-align: left;
     margin: 0 auto 105px;
+    padding-top: 70px;
   }
 }
 
@@ -14,20 +25,56 @@
   list-style: none;
   padding: 0;
   margin-bottom: 0;
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 551px;
+    height: 426px;
+    position: absolute;
+    top: -281px;
+    left: calc(50% + 60px);
+    transform: translateX(-50%);
+    background-image: url("../../img/services-lines-mobile.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
+
+  @include media-breakpoint-up(md) {
+    &::before {
+      width: 846px;
+      left: calc(50% + 200px);
+      background-image: url("../../img/services-lines.svg");
+    }
+  }
+
+  @include media-breakpoint-up(lg) {
+    &::before {
+      top: -341px;
+      left: calc(50% + 376px);
+      transform: translateX(-50%);
+    }
+  }
 }
 
-.services__wrapper {
+.services__item-wrapper {
   max-width: 330px;
   margin: 0 auto;
   padding: 0 30px 30px 30px;
 
+  @include media-breakpoint-up(md) {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    min-height: 245px;
+    height: 100%;
+  }
+
   @include media-breakpoint-up(lg) {
     max-width: none;
-    padding: 0;
-
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 50px 150px 136px;
+    padding: 0 0 100px 0;
   }
 }
 
@@ -50,11 +97,16 @@
     z-index: 1;
   }
 
+  @include media-breakpoint-up(md) {
+    padding: 0 0 0 40px;
+  }
+
   @include media-breakpoint-up(lg) {
     margin: 0;
     padding: 0 20px 0 40px;
     font-size: 20px;
     line-height: 26px;
+    min-height: 52px;
   }
 }
 
@@ -81,9 +133,13 @@
   color: $blue;
   padding-bottom: 30px;
 
+  @include media-breakpoint-up(md) {
+    margin-top: auto;
+  }
+
   @include media-breakpoint-up(lg) {
     font-size: 20px;
     line-height: 36px;
-    padding: 10px 0 100px;
+    padding: 20px 0 0;
   }
 }
