--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -99,6 +99,7 @@
 
   @include media-breakpoint-up(md) {
     padding: 0 0 0 40px;
+    min-height: 52px;
   }
 
   @include media-breakpoint-up(lg) {
@@ -106,7 +107,7 @@
     padding: 0 20px 0 40px;
     font-size: 20px;
     line-height: 26px;
-    min-height: 52px;
+    // min-height: 52px;
   }
 }
 
