--- a/src/scss/components/_user-nav.scss
+++ b/src/scss/components/_user-nav.scss
@@ -67,9 +67,14 @@
 
 .user-nav__logout {
   display: block;
-  width: 32px;
-  height: 30px;
+  width: 21px;
+  height: 20px;
   margin-right: 10px;
+
+  @include media-breakpoint-up(lg) {
+    width: 32px;
+    height: 30px;
+  }
 }
 
 .user-nav__login {
@@ -83,6 +88,32 @@
     &:active {
       color: $grey-dark;
     }
+  }
+}
+
+.user-nav__profile {
+  border-radius: 10px;
+  box-shadow: 0 1px 4px 0 rgba($black, 0.25);
+
+  span {
+    display: none;
+  }
+
+  @include media-breakpoint-up(lg) {
+    border-radius: 20px;
+    box-shadow: none;
+
+    span {
+      display: inline;
+    }
+  }
+}
+
+.user-nav__profile-icon {
+  display: block;
+
+  @include media-breakpoint-up(lg) {
+    display: none;
   }
 }
 
@@ -101,6 +132,8 @@
 
 .user-nav__link-icon {
   display: block;
+  max-width: 100%;
+  max-height: 100%;
   color: $blue-light;
 
   @include color-transition;
