добавит тень у кружочка

--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -116,6 +116,9 @@
     position: absolute;
     border-radius: 50%;
     background-image: radial-gradient($white, $white 5px, $grey-dark 5px, $grey-dark 7px, $grey-light-1 8px);
+    box-shadow: 0 4px 14px rgba(128, 128, 128, 0.22);
+    // box-shadow: 0 4px 14px 0 #80808038;
+
     z-index: 1;
   }
 
