добавит блок Платные Услуги. WIP: доллар и плюс в кружочке + ПП

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,3 +65,5 @@
 @import "components/rating-stars";
 @import "components/services";
 @import "components/breadcrumbs";
+@import "components/paid-services";
+
