поправить крестик и доллар

--- a/src/scss/components/_paid-services.scss
+++ b/src/scss/components/_paid-services.scss
@@ -57,7 +57,7 @@
     background-image: url("../img/services-paid-dollar-sign.svg"), radial-gradient($white, $white 9px, $grey-dark 10px, $grey-dark 15px, $grey-light-1 16px);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 8px 13px 40px 40px;
+    background-size: 8px 13px, 40px 40px;
   }
 
   @include media-breakpoint-up(lg) {
@@ -77,7 +77,7 @@
       left: -24px;
       top: 16px;
       background-image: url("../img/services-paid-dollar-sign.svg"), radial-gradient($white, $white 14px, $grey-dark 15px, $grey-dark 22px, $grey-light-1 23px);
-      background-size: 12px 19px 60px 60px;
+      background-size: 12px 19px, 60px 60px;
     }
 
     &:last-child {
@@ -173,9 +173,9 @@
     transform: translateX(-50%);
     border-radius: 50%;
     background-image: url("../img/packaging-cross-sign.svg"), radial-gradient($white, $white 9px, $blue 10px, $blue 15px, $blue-light 16px);
-    background-position: center;
+    background-position: top 15px left 15px, center;
     background-repeat: no-repeat;
-    background-size: 9px 9px 100% 100%;
+    background-size: 10px 10px, 40px 40px;
   }
 
   @include media-breakpoint-up(lg) {
@@ -190,7 +190,8 @@
       left: 0;
       top: -29px;
       background-image: url("../img/packaging-cross-sign.svg"), radial-gradient($white, $white 14px, $blue 15px, $blue 22px, $blue-light 23px);
-      background-size: 16px 16px 100% 100%;
+      background-position: top 23px left 23px, center;
+      background-size: 14px 14px, 60px 60px;
     }
   }
 }
