--- a/src/scss/components/_paid-services.scss
+++ b/src/scss/components/_paid-services.scss
@@ -3,7 +3,7 @@
 }
 
 .paid-services__wrapper {
-  padding: 0 22px;
+  padding: 0 7px;
   background-color: $grey-dark;
   border-radius: 20px;
 }
@@ -109,7 +109,7 @@
   @include media-breakpoint-up(lg) {
     font-size: 30px;
     line-height: 54px;
-    width: 20%;
+    width: 19%;
   }
 }
 
@@ -128,7 +128,7 @@
     line-height: 21px;
     bottom: 0;
     top: 25px;
-    left: calc(80% + 44px);
+    left: calc(80% + 48px);
     transform: none;
   }
 }
@@ -150,7 +150,7 @@
   padding-bottom: 60px;
 
   @include media-breakpoint-up(lg) {
-    padding-bottom: 120px;
+    padding-bottom: 171px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -181,7 +181,7 @@
   @include media-breakpoint-up(lg) {
 
     text-align: left;
-    width: 25%;
+    width: 24%;
 
     &::before {
       width: 60px;
@@ -200,7 +200,7 @@
   padding: 60px 7px 20px;
 
   @include media-breakpoint-up(lg) {
-    padding: 50px 13px 0;
+    padding: 50px 13px 0 0;
   }
 }
 
@@ -243,6 +243,6 @@
     font-size: 16px;
     line-height: 21px;
     transform: none;
-    left: 14px;
+    left: 5px;
   }
 }
