--- a/src/scss/components/_paid-services.scss
+++ b/src/scss/components/_paid-services.scss
@@ -38,7 +38,6 @@
   background-color: $white;
 
   &:last-child {
-    padding-bottom: 58px;
     margin-bottom: 0;
   }
 
@@ -65,9 +64,8 @@
     padding: 20px 59px 20px 72px;
 
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     text-align: left;
 
     &::before {
@@ -95,6 +93,7 @@
     font-size: 20px;
     line-height: 36px;
     margin: 0;
+    width: 81%;
   }
 }
 
@@ -104,32 +103,24 @@
   line-height: 32px;
   font-weight: 700;
   color: $blue;
-  position: relative;
 
   @include media-breakpoint-up(lg) {
     font-size: 30px;
     line-height: 54px;
-    width: 19%;
   }
 }
 
 .paid-services__cost-note {
-  position: absolute;
   font-size: 14px;
   line-height: 18px;
   font-weight: 500;
   margin: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 20px;
 
   @include media-breakpoint-up(lg) {
     font-size: 16px;
     line-height: 21px;
     bottom: 0;
-    top: 25px;
-    left: calc(80% + 48px);
-    transform: none;
+    padding-left: 16px;
   }
 }
 
@@ -147,10 +138,10 @@
 
 .packaging__list {
   @include list-reset;
-  padding-bottom: 60px;
+  padding-bottom: 41px;
 
   @include media-breakpoint-up(lg) {
-    padding-bottom: 171px;
+    padding-bottom: 154px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -221,7 +212,6 @@
   font-size: 18px;
   line-height: 32px;
   font-weight: 700;
-  position: relative;
 
   @include media-breakpoint-up(lg) {
     font-size: 30px;
@@ -234,10 +224,6 @@
   font-size: 14px;
   line-height: 18px;
   font-weight: 500;
-  position: absolute;
-  width: 100%;
-  left: 50%;
-  transform: translateX(-50%);
 
   @include media-breakpoint-up(lg) {
     font-size: 16px;
