--- a/src/scss/components/_paid-services.scss
+++ b/src/scss/components/_paid-services.scss
@@ -61,9 +61,9 @@
 
   @include media-breakpoint-up(lg) {
     margin-bottom: 20px;
-    padding: 20px 59px 20px 72px;
-
+    padding: 20px 20px 20px 72px;
     display: flex;
+    flex-shrink: 0;
     align-items: center;
     justify-content: flex-start;
     text-align: left;
@@ -93,7 +93,8 @@
     font-size: 20px;
     line-height: 36px;
     margin: 0;
-    width: 81%;
+    width: 78%;
+    padding-right: 15px;
   }
 }
 
