добавит блок Страховка

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -66,4 +66,5 @@
 @import "components/services";
 @import "components/breadcrumbs";
 @import "components/paid-services";
+@import "components/insurance";
 
