--- a/src/scss/components/_insurance.scss
+++ b/src/scss/components/_insurance.scss
@@ -1,3 +1,7 @@
+.insurance {
+  overflow: hidden;
+}
+
 .insurance__wrapper {
   margin-bottom: 40px;
 }
@@ -33,7 +37,7 @@
 }
 
 .insurance__list {
-  margin-left: 8px;
+  margin: 0 15px 0 23px;
 
   @include media-breakpoint-up(lg) {
     margin-left: 0;
@@ -68,8 +72,8 @@
   &::before {
     content: "";
     display: block;
-    width: 200px;
-    height: 184px;
+    width: 201px;
+    height: 183px;
     position: absolute;
     left: calc(50% + 27px);
     top: -200px;
@@ -78,16 +82,17 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    z-index: 1;
   }
 
   &::after {
     content: "";
     display: block;
-    width: 240px;
-    height: 240px;
+    width: 312px;
+    height: 175px;
     position: absolute;
-    // left: calc(50% + 27px);
-    top: -250px;
+    left: -36px;
+    top: -252px;
     background-image: url("../img/insurance-line-mobile.svg");
     background-position: center;
     background-repeat: no-repeat;
@@ -98,17 +103,21 @@
     text-align: left;
 
     &::before {
-      width: 252px;
-      height: 233px;
-      left: calc(50% + 209px);
+      width: 261px;
+      height: 242px;
+      transform: translateX(50%);
+      left: calc(50% - 50px);
       top: -244px;
       background-image: url("../img/insurance-lock.png");
     }
 
     &::after {
-      width: 1150px;
-      height: 1160px;
-      background-image: url("../img/insurance-line.png");
+      width: 1083px;
+      height: 1547px;
+      left: -142px;
+      transform: translateY(-35%);
+      top: -255px;
+      background-image: url("../img/insurance-line.svg");
     }
   }
 }
@@ -123,14 +132,14 @@
 .insurance__pricelist-item {
   width: calc(50% - 10px);
   text-align: center;
-  padding: 20px 20px 18px 17px;
+  padding: 19px 20px 18px 21px;
   border-radius: 14px;
   background-color: $white;
   box-shadow: 0 17px 22px rgba(0, 0, 0, 0.05);
-  margin-bottom: 20px;
+  margin-bottom: 23px;
 
   @include media-breakpoint-up(lg) {
-    padding-top: 38px;
+    padding: 38px 20px 22px 21px;
     margin-bottom: 32px;
   }
 }
@@ -142,11 +151,12 @@
 
   @include media-breakpoint-up(lg) {
     font-size: 20px;
-    line-height: 36px;
+    line-height: 34px;
   }
 }
 
 .insurance__pricelist-rate {
+  font-size: 18px;
   line-height: 32px;
   font-weight: 700;
   color: $blue;
