добавит блок customs

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -62,4 +62,5 @@ $grey-dark: #282828;
 $grey-light: #bfbfbf;
 $grey-light-1: #c1c1c1;
 $grey-medium: #808080;
+$grey-medium-1: #808181;
 $grey-special: #5d5d5d;
