--- a/src/scss/components/_customs.scss
+++ b/src/scss/components/_customs.scss
@@ -23,22 +23,11 @@
 .customs__wrapper {
   position: relative;
 
-  &::after {
-    content: "";
-    position: absolute;
-    display: block;
-    left: 91px;
-    transform: translateY(50%);
-    bottom: calc(50% - 65px);
-    width: 227px;
-    height: 174px;
-    background-image: url("../img/customs-mobile.png");
-    background-repeat: no-repeat;
-    background-size: 100%;
-  }
-
   @include media-breakpoint-up(lg) {
-    &::after {
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
       width: 552px;
       height: 423px;
       transform: none;
@@ -49,18 +38,26 @@
   }
 }
 
-.customs__desc-wrapper {
-  @include media-breakpoint-up(lg) {
-    padding-left: 9px;
-  }
-}
-
 .customs__desc {
   line-height: 29px;
   text-align: center;
-  margin: 0 0 236px;
-  padding: 0 7px;
+  margin: 0;
+  padding: 0 7px 236px;
   position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    transform: translateX(50%);
+    bottom: 33px;
+    left: calc(50% - 198px);
+    width: 227px;
+    height: 174px;
+    background-image: url("../img/customs-mobile.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
 
   @include media-breakpoint-up(lg) {
     font-size: 20px;
@@ -68,6 +65,10 @@
     text-align: left;
     margin: 0 0 27px 0;
     padding: 0 10px 0 0;
+
+    &::after {
+      display: none;
+    }
   }
 }
 
