--- a/src/scss/components/_tariffs.scss
+++ b/src/scss/components/_tariffs.scss
@@ -3,8 +3,7 @@
   text-align: center;
 
   @include media-breakpoint-up(lg) {
-    padding: 70px 0;
-    padding-bottom: 60px;
+    padding-top: 70px;
     text-align: left;
   }
 }
