--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -57,6 +57,7 @@
 @import "components/calculator";
 @import "components/tariffs";
 @import "components/tariff";
+@import "components/tariff-info";
 @import "components/work-scheme";
 @import "components/promo-slider";
 @import "components/features";
